--- a/FileUpload/Views/Shared/_Layout.cshtml
+++ b/FileUpload/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     </environment>
 </head>
 <body>
+    @Html.AntiForgeryToken()
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
