--- a/FileUpload/Views/Home/Index.cshtml
+++ b/FileUpload/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                     <div class="input-group">
                         <button type="submit" value="Upload Small File" class="btn btn-default" id="UploadSmallFile">Upload Small File</button>
                         <button type="button" value="Upload Streaming File" class="btn btn-default" id="UploadStreamingFile" onclick="uploadStreamingFile()">Upload Streaming File</button>
-                        <button type="button" value="Upload to Blob" class="btn btn-default" id="UploadStreamingFile" onclick="uploadBlob()">Upload to Blob</button>
+                        <button type="button" value="Upload to Blob" class="btn btn-default" id="UploadBlob" onclick="uploadBlob()">Upload to Blob</button>
                     </div>
                 </div>
                 <div class="form-group hidden" id="uploadProgressBarContainer">
